k8s/cluster-apps/hoarder/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder
  namespace: hoarder
spec:
  selector:
    matchLabels:
      app: hoarder
  template:
    metadata:
      labels:
        app: hoarder
    spec:
      containers:
        - name: hoarder
          image: ghcr.io/hoarder-app/hoarder:latest@sha256:7bb29659a005e39c2de47ac5cb4b97d67b3ac33204a88921cf1c50b57dedffaa
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: config
              mountPath: /data
              subPath: hoarder

        - name: chrome
          image: zenika/alpine-chrome:latest@sha256:00e1776c1bafb41260bb90ce3f596b769cac201505169c81d7e4827cc2914414
          args:
            - --no-sandbox
            - --disable-gpu
            - --disable-dev-shm-usage
            - --remote-debugging-address=0.0.0.0
            - --remote-debugging-port=9222
            - --hide-scrollbars
          ports:
            - containerPort: 9222
              name: debugging

        - name: meilisearch
          image: getmeili/meilisearch:latest@sha256:bed3fb650e62da53145777204891159242f6ea4ce69e215b36223af4aa64a0ae
          ports:
            - containerPort: 7700
              name: http
          volumeMounts:
            - name: config
              mountPath: /meili_data
              subPath: meilisearch

      volumes:
        - name: config
          hostPath:
            path: /config
            type: DirectoryOrCreate
