k8s/cluster-apps/hoarder/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hoarder
  name: hoarder
  namespace: hoarder
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: hoarder
  type: ClusterIP
