k8s/cluster-apps/hoarder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: hoarder
  name: hoarder
  namespace: hoarder
spec:
  ingressClassName: nginx
  rules:
    - host: hoarder.k8s.javydekoning.com
      http:
        paths:
          - backend:
              service:
                name: hoarder
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hoarder.k8s.javydekoning.com
      secretName: javydekoning-com-tls
